<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_config_module"
        android:icon="@drawable/ic_param_config"
        android:title="@string/config_module" />

    <item
        android:id="@+id/item_map_module"
        android:icon="@null"
        android:title="" />

    <item
        android:id="@+id/item_project_module"
        android:icon="@drawable/ic_project_module"
        android:title="@string/project_module" />

<!--    <item
        android:id="@+id/item_knowledge_module"
        android:icon="@drawable/ic_knowledge_module"
        android:title="@string/knowledge_module" />-->

    <item
        android:id="@+id/item_me_module"
        android:icon="@drawable/ic_me_module"
        android:title="@string/me_module" />

</menu>