<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomLayout"
    android:layout_width="match_parent"
    android:layout_height="96dp"
    android:layout_alignParentBottom="true"
    android:background="#99000000"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/flashLightLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/flashLightIv"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_close_flashligh" />

        <TextView
            android:id="@+id/flashLightTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/open_flash"
            android:textColor="@color/white" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/inputSNLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/inputIv"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_inupt"
            android:tint="#ffffffff" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/input_sn"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/albumLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/albumIv"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_photo"
            android:tint="#ffffffff" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/gallery"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>
